# splunk

./: .editorconfig  .gitignore  Directory.Build.props  README.md  bitwarden-splunk.sln  build.ps1  deploy.sh  docker-compose.yml  globalConfig.json  output.txt  package.sh  pyproject.toml  splunk_configuration.yml
.github/: CODEOWNERS  renovate.json
.github/workflows/: build.yml  release.yml  scan.yml  version-bump.yml
app/bitwarden_event_logs/: README
app/bitwarden_event_logs/appserver/static/javascript/views/: app.js  setup_configuration.js  setup_page.js  splunk_helpers.js  store_secret.js
app/bitwarden_event_logs/default/: app.conf  collections.conf  inputs.conf  props.conf
app/bitwarden_event_logs/default/data/ui/views/: authentication_events_dashboard.xml  organization_events_dashboard.xml  setup_page_dashboard.xml  vault_item_events_dashboard.xml
dev/: docker-compose.yml
docs/: migration-guide.md  organization-event-logs-feature.md  test-hec-events.md
package/: app.manifest
package/README/: script.conf.spec
package/appserver/static/javascript/: app_const.js  setup_page.js
package/appserver/static/javascript/views/: app.js  setup_page.js  splunk_helpers.js  storage_passwords.js
package/default/: app.conf  collections.conf  inputs.conf  macros.conf  props.conf  script.conf  server.conf
package/default/data/ui/nav/: default.xml
package/default/data/ui/views/: authentication_events_dashboard.xml  setup_page_dashboard.xml
package/lib/: requirements.txt
src/: __init__.py  bitwarden_api.py  bitwarden_event_logs.py  config.py  event_logs.py  event_logs_collector.py  events.py  mappers.py  models.py  script.py  service.py  splunk_api.py  utils.py
src/Splunk/: AppSettings.cs  BitwardenApi.cs  EventsApi.cs  Program.cs  Splunk.csproj  SplunkApi.cs
src/Splunk/Models/: EventLogModel.cs  EventRequestModel.cs  EventResponseModel.cs  EventsApiCollectionModel.cs  EventsApiKey.cs  EventsApiKeyModel.cs  GroupResponseModel.cs  ListResponseModel.cs  MemberResponseModel.cs
tests/: test_config.py  test_mappers.py
ui/: .editorconfig  .gitignore  README.md  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
ui/.husky/: pre-commit
ui/projects/setup/: tsconfig.app.json
ui/projects/setup/src/: config.ts  index.html
ui/projects/setup/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts
ui/projects/setup/src/models/: bitwarden-splunk.ts  setup-form.ts
ui/projects/setup/src/splunk/: bitwarden-splunk.service.ts  service.ts  splunk-js-service-builder.ts  splunk-js.d.ts  splunk-js.service.ts  splunk.service.ts  splunkjs.ts
ui/projects/setup/src/validators/: secure-url-validator.directive.ts  value-selected-or-provided-validator.directive.ts
ui/src/: main.ts  styles.css
ui/src/app/: app.component.html  app.component.ts
ui/src/environments/: environment.development.ts  environment.ts
ui/src/models/: bitwarden-splunk.ts  setup-form.ts
ui/src/splunk/: bitwarden-splunk.service.ts  splunk-js-service-builder.ts  splunk-js.d.ts  splunk.service.ts
ui/src/validators/: index-required-validator.directive.ts  index-required.validator.ts  index.ts  secure-url.validator.ts
