[tool.poetry]
name = "bitwarden_event_logs"
version = "1.2.2"
description = "A Splunk app for reporting Bitwarden event logs."
authors = [
    "Bitwarden Inc. <hello@bitwarden.com>"
]
maintainers = [
    "Maciej Zieniuk <zieniuk.maciej@gmail.com>"
]
readme = "README.md"
keywords = ["splunk", "bitwarden"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
requests = "2.32.3"
splunk-sdk = "2.1.0"
splunktaucclib = "8.0.0"
python-dateutil = "2.9.0.post0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python = ">=3.9, <3.11"
python-dotenv = "1.1.0"
types-requests = "2.31.0.6"
splunk-add-on-ucc-framework = "5.61.0"
splunk-appinspect = "3.9.1"

[tool.poetry.group.splunkslim]
optional = true

[tool.poetry.group.splunkslim.dependencies]
python = ">=3.9"
splunk-packaging-toolkit = "1.0.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
python = ">=3.9"
pytest = "8.3.5"

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
