[tool.poetry]
name = "bitwarden_event_logs"
version = "1.4.0"
description = "A Splunk app for reporting Bitwarden event logs."
authors = [
    "Bitwarden Inc. <hello@bitwarden.com>"
]
maintainers = [
    "Maciej Zieniuk <zieniuk.maciej@gmail.com>"
]
readme = "README.md"
keywords = ["splunk", "bitwarden"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
requests = "2.32.5"
splunk-sdk = "2.1.1"
splunktaucclib = "8.0.0"
python-dateutil = "2.9.0.post0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python = ">=3.9, <3.11"
python-dotenv = "1.1.1"
types-requests = "2.31.0.6"
splunk-add-on-ucc-framework = "5.69.1"
splunk-appinspect = "4.0.2"

[tool.poetry.group.splunkslim]
optional = true

[tool.poetry.group.splunkslim.dependencies]
python = ">=3.9"
splunk-packaging-toolkit = "1.2.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
python = ">=3.9"
pytest = "8.4.2"

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
